admin/resources/css/spa-admin.css
/* ... */
#sfmaincontainer .sf-alert-block .sf-icon {
    margin-right: 10px;
}
#sfmaincontainer .sf-alert-block.sf-caution:before {
    border-left: 5px solid #f8dc7d;
}
#sfmaincontainer .sf-alert-block.sf-warning:before {
    border-left: 5px solid #fa5959;
}
#sfmaincontainer .sf-alert-block+.sf-alert-block {
    margin-top: -20px;
}

#sfmaincontainer .sf-alert-block.sf-info {
    /*background-color: rgb(250, 246, 211);
    border-color: rgb(210, 205, 153);
    color: #000000;*/
}

#sfmaincontainer p.sf-description {
    font-style: normal;
    font-size: 13px;
    line-height: 24px;
    color: #85A2BC;
}

#sfmaincontainer .sfhelplink .sf-icon.sf-help {
    background-color: var(--sp-primary-color);
}
#sfmaincontainer .sf-form-submit-bar {
    margin: 30px 0 0 0;
    padding: 0;
}
#sfmaincontainer .sf-alert-block+.sf-form-submit-bar {
    margin-top: 0;
}


#sfmaincontainer .sf-panel-body .sf-full-form .sf-panel-body-top:after {
    content: "";
    position: absolute;
    bottom: 0;
    height: 1px;
    left: -30px;
    right: -30px;
    clear: both;
    /* width: 100%; */
    /* margin-left: -553px; */
    background: transparent;
    box-shadow: 0 1px 0 #F0F0F0;
}
#sfmaincontainer .sf-panel-body .sf-full-form .sf-panel-body-top table .sf-panel-body-top-right {
    margin-bottom: 20px;
}

#sfmaincontainer .sf-panel-body .sf-full-form .sf-title-block.sf-title-block-v2 p {
    margin: 4px 0 0 0;
}
#sfmaincontainer .sf-panel-body .sf-full-form .sf-panel-body-top-right {
    float: right;
    margin: 5px -10px 0 0;
    padding: 0;
}
#sfmaincontainer .sf-panel-body .sf-full-form+.sf-form-submit-bar {
    /*margin: 30px 0 0 0;*/
}

#sfmaincontainer .sf-panel-body .sf-half-form .sf-panel-body-top-right {
    float: right;
}
#sfmaincontainer .sf-panel-body .sf-half-form .sf-fieldset {
    background-color: #FFF;
}
#sfmaincontainer .sf-panel-body .sf-half-form+.sf-form-submit-bar {
    margin: 0;
}
#sfmaincontainer .sf-upload {
    display: inline-block;
    position: relative;
    margin: 0;
}
#sfmaincontainer .sf-upload label {
    display: none;
}
#sfmaincontainer .sp-radio {
    margin-top: 8px;
}
#sfmaincontainer .sp-radio input {
    margin-left: 8px;
}
#sfmaincontainer .sf-upload #sf-upload-status {
    position: absolute;
    background: #8e8c8c;
    padding: 0 10px;
    right: 0;
    color: white;
    top: 30px;
    border-radius: 4px;
    width: 150px;
    z-index: 999;
}
#sfmaincontainer .sf-fieldset .subsubsub-desk,
#sfmaincontainer .sf-fieldset .subsubsub {
    width: auto;
    margin: 17px 0 0 0;
    font-size: 14px;
}
#sfmaincontainer .sf-fieldset .subsubsub-desk li,
#sfmaincontainer .sf-fieldset .subsubsub li {
    float: left;
    width: auto;
    margin-right: 20px;
}
#sfmaincontainer .sf-fieldset .subsubsub-desk a,
#sfmaincontainer .sf-fieldset .subsubsub a {
    line-height: 19px;
    margin: 0;
    padding: 0;
    color: #9D9EA0;
}
#sfmaincontainer .sf-fieldset .subsubsub-desk a.current,
#sfmaincontainer .sf-fieldset .subsubsub a.current {
    color: #257EA1;
}
#sfmaincontainer .sf-fieldset .subsubsub-desk a .count,
#sfmaincontainer .sf-fieldset .subsubsub-desk a.current .count,
#sfmaincontainer .sf-fieldset .subsubsub a .count,
#sfmaincontainer .sf-fieldset .subsubsub a.current .count {
    font-weight: inherit;
    color: inherit;
}

/*#sfmaincontainer .sf-fieldset .tablenav {
    display: none;
}*/


#sfmaincontainer .sf-fieldset .tablenav {
    height: auto;
}



#sfmaincontainer .sf-tablenav {
    display: grid;
    grid-column-gap: 20px;
    grid-template-columns : 1fr 1fr 1fr;
    margin-bottom: 20px;
}


#sfmaincontainer .sf-tablenav .sf-form-row-search {
    grid-column : 1 / span 2;
    margin-bottom: 0;
}


#sfmaincontainer .sf-tablenav .sf-pagination {
    grid-column : 1 / span 2;
    margin-bottom: 10px;
}

#sfmaincontainer .sf-fieldset .sf-plugin-hide-users .tablenav {
    display: initial;
}


#sfmaincontainer .sf-fieldset .sf-plugin-hide-users .tablenav .tablenav-pages {
    display: none;
}


#sfmaincontainer .sf-fieldset .sf-plugin-hide-users .tablenav .actions.bulkactions select {
    min-width: 150px;
    width: auto;
    margin: 0;
}

#sfmaincontainer .sf-fieldset .sf-plugin-hide-users .tablenav .actions.bulkactions {
    margin: 13px 0;
}


#sfmaincontainer .sf-panel-body-top-right .sf-input-group,
#sfmaincontainer .sf-panel-body-top-right .search-box {
    float: left;
    width: 200px;
    margin: 5px 20px 5px 0;
}
#sfmaincontainer .sf-panel-body-top-right .sf-input-group {
    width: 250px;
}
#sfmaincontainer .sf-panel-body-top-right .sf-input-group.sf-input-small {
    width: 220px;
}
#sfmaincontainer .sf-panel-body-top-right .search-box input[type="search"] {
    height: 40px;
    margin: 0;
    -webkit-border-radius: 20px;
    border-radius: 20px;
}
#sfmaincontainer .sf-panel-body-top-right .search-box #search-submit {
    display: none;
}

#sfmaincontainer .sf-link {
    display: inline-block;
    font-weight: 600;
    font-size: 12px;
    color: #006992;
    cursor: pointer;
}
#sfmaincontainer .sf-link .sf-icon {
    margin: -3px 8px 0 0;
}

#sfmaincontainer .sf-item-controls {
    float: right;
}
#sfmaincontainer .sf-item-controls>.sf-icon {
    margin-right: 10px;
}

#sfmaincontainer .sf-pagination, #sfmaincontainer .tablenav .tablenav-pages {
    float: left;
    width: 100%;
    margin-top: 20px;
}

#sfmaincontainer .sf-pagination a, #sfmaincontainer .tablenav .tablenav-pages a {
    position: relative;
    float: left;
    min-width: 30px;
    min-height: 30px;
    margin: 5px 0;
    font-size: 16px;
    line-height: 22px;
    color: #006992;
    padding: 4px;
    text-align: center;
    background: none;
    border: 0;
}

#sfmaincontainer .sf-pagination a:hover, #sfmaincontainer .tablenav .tablenav-pages a:hover {
    background-color: rgba(0, 105, 146, .05);
}
/* ... */

